# dotfiles

./: .chezmoi.toml.tmpl  .pre-commit-config.yaml  README.md  chezmoiexternal.toml  dot_bashrc  private_dot_bash_aliases  private_dot_editorconfig  private_dot_p10k.zsh  private_dot_taskrc  private_dot_tmux.conf  private_dot_tool-versions  private_dot_xinitrc  private_dot_zshrc
dot_config/quickshell/basic/: AudioMonitor.qml  AudioWidget.qml  Bar.qml  BatteryMonitor.qml  BatteryWidget.qml  BluetoothMonitor.qml  BluetoothWidget.qml  BottomPopup.qml  BrightnessMonitor.qml  BrightnessWidget.qml  CMMonitor.qml  CMWidget.qml  CMakeLists.txt  CPUMonitor.qml  CPUWidget.qml  ClockWidget.qml  Colors.qml  Delimiter.qml  IdleMonitor.qml  IdleWidget.qml  MemoryMonitor.qml  MemoryWidget.qml  MusicMonitor.qml  MusicWidget.qml  PowerprofileMonitor.qml  PowerprofileWidget.qml  README.md  Spacer.qml  TemperatureMonitor.qml  TemperatureWidget.qml  Time.qml  TrayWidget.qml  Triangle.qml  UpdateMonitor.qml  UpdateWidget.qml  WifiMonitor.qml  WifiWidget.qml  WorkspaceButton.qml  shell.qml  symlink_dot_qmlls.ini
dot_config/quickshell/basic/dot_qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  appuntitled_qml.cmake  appuntitled_res.cmake
dot_config/quickshell/basic/dot_qt/rcc/: appuntitled_raw_qml_0.qrc  qmake_untitled.qrc
dot_config/quickshell/basic/dot_rcc/qmlcache/: all_aotstats.aotstatslist  appuntitled_qml_loader_file_list.rsp  module_appuntitled.aotstatslist
dot_config/quickshell/basic/dot_rcc/qmllint/: appuntitled.rsp  appuntitled_json.rsp  appuntitled_module.rsp
(+135 files in other folders)
